--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.3.6",
+    "bootstrap": "^5.3.0-alpha3",
+    "element-plus": "^2.3.4",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
