--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,13 @@ dependencies {
 
     asciidoctorExt "org.springframework.restdocs:spring-restdocs-asciidoctor:${asciidocVersion}"
     testImplementation "org.springframework.restdocs:spring-restdocs-mockmvc:${asciidocVersion}"
+
+    // test Containers
+    testImplementation "org.testcontainers:junit-jupiter:1.17.2"
+    testImplementation "org.testcontainers:mysql:1.17.2" // mysql 컨테이너를 사용한다면 추가
+
+// DB Driver
+    runtimeOnly 'mysql:mysql-connector-java'
 }
 
 tasks.named('test') {
