mysql 8 is too slow (i have not figured out reason) and keep creating new mysql8 container. but mysql5 works but still slow postgres works fine so will go with postgres

--- a/build.gradle
+++ b/build.gradle
@@ -48,9 +48,11 @@ dependencies {
     // test Containers
     testImplementation "org.testcontainers:junit-jupiter:1.17.2"
     testImplementation "org.testcontainers:mysql:1.17.2" // mysql 컨테이너를 사용한다면 추가
+    testImplementation "org.testcontainers:postgresql:1.17.2" // mysql 컨테이너를 사용한다면 추가
 
 // DB Driver
     runtimeOnly 'mysql:mysql-connector-java'
+    runtimeOnly 'org.postgresql:postgresql'
 }
 
 tasks.named('test') {
