--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,12 +1,16 @@
 spring:
   datasource:
     driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
-    url: jdbc:tc:mysql:8://testDB
+    url: jdbc:tc:postgresql://test-database
+#    url: jdbc:tc:mysql://test-database
   jpa:
     show-sql: true
     hibernate:
       ddl-auto: create
     defer-datasource-initialization: true
+    properties:
+      hibernate:
+          dialect: org.hibernate.dialect.PostgreSQLDialect
   sql:
     init:
       mode: embedded
